<resources>
    <string name="app_name">Submission</string>
    <string name="crypto_name">Nama Koin</string>
    <string name="detail">Detail Koin</string>
    <string name="list">List</string>
    <string name="grid">Grid</string>
    <string name="with_cardview">with CardView</string>
    <string name="favorite">Favorite</string>
    <string name="share">Share</string>
    <string name="about_me">About Me</string>
    <string name="img_description">Founder</string>
    <string name="coin_name">Coin Name</string>
    <string name="coin_creator">Name</string>
    <string name="coin_overview">Overview</string>
    <string name="coin_description">Description</string>
    <string name="readmore">Readmore</string>
    <string name="coin_profile">Pic of creator coin</string>
    <string name="dob">Date of Birth</string>
    <string name="launched">Launch</string>
    <string name="suport_wallet">Suport Wallet :</string>
    <string name="jenis_wallet">jenis jenis wallet</string>
    <string name="Overview">Overview</string>
    <string name="wallet_name">Wallet Name</string>
</resources>