<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivProfile"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_165sdp"
            android:layout_marginStart="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_14sdp"
            android:scaleType="fitXY"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="@string/img_description" />

        <TextView
            android:id="@+id/tv_item_creator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_18sdp"
            android:text="@string/coin_creator"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/ivProfile"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_creator_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:text="@string/coin_creator"
            app:layout_constraintStart_toEndOf="@+id/ivProfile"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_creator" />

        <TextView
            android:id="@+id/tv_item_dob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_18sdp"
            android:text="@string/dob"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/ivProfile"
            app:layout_constraintTop_toBottomOf="@+id/tv_creator_name" />

        <TextView
            android:id="@+id/tv_creator_dob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:text="@string/dob"
            app:layout_constraintStart_toEndOf="@+id/ivProfile"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_dob" />

        <TextView
            android:id="@+id/tv_item_launch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_18sdp"
            android:text="@string/launched"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/ivProfile"
            app:layout_constraintTop_toBottomOf="@+id/tv_creator_dob" />

        <TextView
            android:id="@+id/tv_coin_launch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:text="@string/launched"
            app:layout_constraintStart_toEndOf="@+id/ivProfile"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_launch" />

        <TextView
            android:id="@+id/tv_item_support_wallet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_18sdp"
            android:text="@string/suport_wallet"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivProfile" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_wallet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:layout_marginEnd="@dimen/_14sdp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_support_wallet"
            tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_crypto_wallet" />

        <TextView
            android:id="@+id/tv_item_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:text="@string/coin_overview"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_wallet" />

        <TextView
            android:id="@+id/tv_coin_overview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_14sdp"
            android:justificationMode="inter_word"
            android:text="@string/coin_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_overview" />

        <Button
            android:id="@+id/btn_share"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_14sdp"
            android:layout_marginBottom="@dimen/_14sdp"
            android:text="@string/share"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_coin_overview" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
